TIT-200: Java Errors on MacOS