@@ -11,12 +11,35 @@ public class ProcessLauncher {
         List<String> command = new ArrayList<>();
         command.add(javaConfig.getJavaHomeBuilder());
         command.add(javaConfig.getMaxHeapSizeBuilder());
+
         if (SystemUtils.IS_OS_MAC){
             if("Java 17".equals(javaConfig.getJavaHome())){
-//                command.add("--add-opens=java.base/java.util=ALL-UNNAMED"); // Ensure reflection-based features work
                 command.add("--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED");
             }
         }
+
+        if("Java 17".equals(javaConfig.getJavaHome())){
+            command.add("--add-modules=java.sql.rowset");
+            command.add("--add-exports=java.base/com.sun.crypto.provider=ALL-UNNAMED");
+            command.add("--add-exports=java.base/sun.security.provider=ALL-UNNAMED");
+            command.add("--add-opens=java.base/java.lang=ALL-UNNAMED");
+            command.add("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED");
+            command.add("--add-opens=java.base/java.math=ALL-UNNAMED");
+            command.add("--add-opens=java.base/java.net=ALL-UNNAMED");
+            command.add("--add-opens=java.base/java.security=ALL-UNNAMED");
+            command.add("--add-opens=java.base/java.security.cert=ALL-UNNAMED");
+            command.add("--add-opens=java.base/java.text=ALL-UNNAMED");
+            command.add("--add-opens=java.base/java.util=ALL-UNNAMED");
+            command.add("--add-opens=java.base/sun.security.pkcs=ALL-UNNAMED");
+            command.add("--add-opens=java.base/sun.security.rsa=ALL-UNNAMED");
+            command.add("--add-opens=java.base/sun.security.x509=ALL-UNNAMED");
+            command.add("--add-opens=java.desktop/java.awt=ALL-UNNAMED");
+            command.add("--add-opens=java.desktop/java.awt.color=ALL-UNNAMED");
+            command.add("--add-opens=java.desktop/java.awt.font=ALL-UNNAMED");
+            command.add("--add-opens=java.desktop/javax.swing=ALL-UNNAMED");
+            command.add("--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED");
+        }
+
         command.add("-cp");
         command.add(String.join(File.pathSeparator, codeBase.getClasspath()));
         command.add(codeBase.getMainClass());
